--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,15 @@ dependencies:
     sdk: flutter
 
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite:
+  intl: ^0.17.0
+
+  conditional_builder_null_safety: ^0.0.6
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
